# chatgpt-physics-plugin

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
public/: openapi.yaml
public/.well-known/: ai-plugin.json
src/: main.py
